Fix edit_book form header overlap on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -425,7 +425,7 @@ header {
     color: var(--main-color);
     font-family: 'Source Sans Pro', serif;
     text-transform: uppercase;
-    font-size: 1.1rem;
+    font-size: 1rem;
 }
 
 .fa-lg {
